# Trampantojo

./: .gitignore  Cargo.toml
clickhouse/: schema.sql
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/csirt-poller/: Cargo.toml
crates/csirt-poller/src/: checkpoint.rs  client.rs  filter.rs  main.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs  main.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: main.rs
crates/scoring/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: clickhouse.rs  lib.rs  postgres.rs  redis_streams.rs
crates/whatsapp-bot/: Cargo.toml
docs/: data-model.md
infra/docker/: docker-compose.yml
migrations/: 0001_create_iocs.down.sql  0001_create_iocs.sql  0002_create_community_reports.sql  0003_create_csirt_poller_state.sql
