[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
trampantojo-core = { path = "../core" }
storage = { path = "../storage" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
