[package]
name = "csirt-poller"
version = "0.1.0"
edition = "2024"

[dependencies]
trampantojo-core = { path = "../core" }
storage           = { path = "../storage" }
ingestion         = { path = "../ingestion" }
tokio             = { version = "1", features = ["full"] }
reqwest           = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
chrono            = { version = "0.4", features = ["serde"] }
anyhow            = "1"
tracing           = "0.1"
tracing-subscriber = "0.3"
dotenvy           = "0.15"
sqlx              = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
uuid              = { version = "1", features = ["v4"] }
