[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
trampantojo-core = { path = "../core" }
storage = { path = "../storage" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
dotenvy = "0.15"
ipnet = "2.12.0"

